Fix install banner overflowing with search bar

--- a/src/client/app/search/search/search.component.scss
+++ b/src/client/app/search/search/search.component.scss
@@ -2,6 +2,10 @@ header {
 	display: flex;
 	align-items: center;
 
+	&.has-install-banner-above {
+		margin-top: 64px;
+	}
+
 	button {
 		margin-top: -20px;
 	}
